--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL=http://localhost:5000/api/v1
-VITE_BACKEND_URL=https://mern-task-manager-backend-cywc.onrender.com/api/v1
+VITE_BACKEND_URL=http://localhost:5000/api/v1
+# VITE_BACKEND_URL=https://mern-task-manager-backend-cywc.onrender.com/api/v1
